responsive and banner fix
- temporarily fix responsiveness to make sure the pages render on mobile
without breaking
- set the purple banner as an alternate suggestion

--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -5,8 +5,9 @@
             %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 body { 
-  padding-top: 70px; 
+  padding-top: 65px; 
   padding-bottom: 50px;
+  min-width: 899px;
 }
 
 .header {
