--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -21,6 +21,9 @@ color: #666666;
 
    &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
+.banner-container {
+ margin-bottom: 60px;   
+}
 
 .banner-custom{
     
@@ -39,17 +42,6 @@ font-weight: 100;
 margin-top: 95px;
 position: relative;
 left: 40px;
-    
-}
-
-.hr-custom{
-    
-margin: 0px 0px 90px 0px;
-display: block;
-border: 0;
-border-top: 1px solid #dfdfdf;
-border-bottom: 1px solid #fff;
- 
     
 }
 
@@ -98,10 +90,10 @@ border-bottom: 1px solid #fff;
                              }
 
      @media (max-width: 491px){
-                                margin-left: 20px;
-                                margin-right: 20px;
-                                padding-left: 20px;
-                                padding-right: 20px;
+                                margin-left: 0px;
+                                margin-right: 0px;
+                                padding-left: 10px;
+                                padding-right: 10px;
                              }
 
 }
@@ -136,20 +128,53 @@ a.link_grey:hover {
     text-decoration: none;
 }
 
+/* Main box for each category section */
 
-/* Box Layout */
+.category-main {
+    border: 1px solid;
+    border-color: #bbbbbb;
+    border-radius: 3px;
+    background-color: #ffffff;
+    display: block;
+    width: 105%;
+    height: 110px;
+    
+    padding: 10px;
+    margin-bottom: 25px;
+    position: relative;
+    left: 35px;
+    display:flex; 
+    align-items: center;
+
+    
+    @media (max-width: 768px){
+                                width: 80%;
+                                left: 50px;
+                                height: 90px;
+                             }
+    
+    @media (max-width: 460px){
+                                width: 80%;
+                                left: 40px;
+                                height: 90px;
+                             }
+}
+
 
 .left-part{        /*icon layout*/
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
+    display: block;
+    float: left;
+    padding-right: 5px;
 }
 
 .middle-part{           /*text layout*/
 
     vertical-align: middle;
     align: left;
-    display: table-cell;
+    display: block;
+    float: left;
+    padding-left: 5px;
+    width: 70%;
 
     .category-heading{
 
@@ -176,7 +201,7 @@ a.link_grey:hover {
 
             @media (max-width: 491px){
 
-                                        font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+                                        font: 200 12px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
                                         
                                      }
 
@@ -195,8 +220,7 @@ a.link_grey:hover {
 
             @media (max-width: 991px){
                                         font: 200 11px/1.2em "Helvetica","Arial",sans-serif;
-                                       
-                                        
+                                                                              
                                      }
 
             @media (max-width: 768px){
@@ -215,12 +239,20 @@ a.link_grey:hover {
 
 .right-part{            /*caret layout*/
 
-    display: table-cell;
-    color: #f1f2f2;
-    font-size: 3rem;
-    padding-top: 5px;
-}
+    display: block;
+    color: #bbb;
+    font-size: 6rem;
+    float: right;
+    width: 15%;
 
+    @media (max-width: 991px) {
+                                    font-size: 4rem;
+                              }
+
+    @media (max-width: 491px) {
+                                    display: none;
+                              }
+}
 
 
 /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
@@ -228,38 +260,6 @@ a.link_grey:hover {
                                             New to BaseSpace Section
 
    &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
-
-/* Box for New to Basespace section */
-
-#sidebarmodule-newb{
-    
-    border: 1px solid;
-    border-color: #bbbbbb;
-    border-radius: 3px;
-    background-color: #ffffff;
-    display: table;
-    width: 105%;
-    height: 110px;
-    
-    padding: 10px;
-    margin-bottom: 25px;
-    position: relative;
-    left: 35px;
-    
-    
-     @media (max-width: 768px){
-                                width: 80%;
-                                left: 50px;
-                                height: 90px;
-                             }
-    
-    @media (max-width: 460px){
-                                width: 80%;
-                                left: 40px;
-                                height: 90px;
-                             }
-   
-}
 
 
 /* New to Basespace Hover CSS */
@@ -306,7 +306,6 @@ a.link_grey:hover {
     
     font-size: 45px;         
     color: #328ED1;
-    display: table-cell;
     position: relative;
     padding-right: 10px;
     padding-left: 10px;
@@ -328,7 +327,7 @@ a.link_grey:hover {
     
     @media (max-width: 491px){
                                 top: -1px;
-                                font-size: 35px;
+                                font-size: 25px;
                              }
     
     
@@ -340,39 +339,6 @@ a.link_grey:hover {
                                             Article Section
 
    &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
-
-/* Box for Article section */
-
-#sidebarmodule-articles{
-    
-    border: 1px solid;
-    border-color: #bbbbbb;
-    border-radius: 3px;
-    background-color: #ffffff;
-    display: table;
-    width: 105%;
-    height: 110px;
-    
-    padding: 10px;
-    margin-bottom: 25px;
-    position: relative;
-    left: 35px;
-    
-    
-     @media (max-width: 768px){
-                                width: 80%;
-                                left: 50px;
-                                height: 90px;
-                             }
-    
-    @media (max-width: 460px){
-                                width: 80%;
-                                left: 40px;
-                                height: 90px;
-                             }
-   
-}
-
 
 /* Articles Hover CSS */
 
@@ -416,7 +382,6 @@ a.link_grey:hover {
     
     font-size: 45px;         
     color: #ffb441;
-    display: table-cell;
     position: relative;
     padding-right: 10px;
     padding-left: 10px;
@@ -437,7 +402,7 @@ a.link_grey:hover {
     
     @media (max-width: 491px){
                                 top: -1px;
-                                font-size: 35px;
+                                font-size: 25px;
                              }
     
     
@@ -449,39 +414,6 @@ a.link_grey:hover {
                                            Dev Section CSS
 
    &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
-
-
-
-#sidebarmodule-dev{
-    
-    border: 1px solid;
-    border-color: #bbbbbb;
-    border-radius: 3px;
-    background-color: #ffffff;
-    display: table;
-    width: 105%;
-    height: 110px;
-    
-    padding: 10px;
-    margin-bottom: 25px;
-    position: relative;
-    left: 35px;
-    
-    
-     @media (max-width: 768px){
-                                width: 80%;
-                                left: 50px;
-                                height: 90px;
-                             }
-    
-    @media (max-width: 460px){
-                                width: 80%;
-                                left: 40px;
-                                height: 90px;
-                             }
-    
-}
-
 
 #sidebarmodule-dev:hover{
     
@@ -524,7 +456,6 @@ a.link_grey:hover {
 
     font-size: 45px;
     color: #BAC147;
-    display: table-cell;
     position: relative;
     padding-right: 10px;
     padding-left: 10px;
@@ -545,32 +476,7 @@ a.link_grey:hover {
 
     @media (max-width: 491px){
                                 top: -1px;
-                                font-size: 35px;
-                             }
-
-}
-
-/* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
-
-                                            ICONS
-
-   &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
-
-/* Right Caret Icon */
-
-.caret-right{
-
-    font-size: 60px;
-    color: #bbbbbb;
-    position: relative;
-    top: 7px;
-    left: 10px;
-    display: table-cell;
-
-    @media (max-width: 768px){
-                                top: -3px;
-                                font-size: 60px;
-
+                                font-size: 25px;
                              }
 
 }
