more responsiveness fixes

--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -32,6 +32,10 @@ body {
   sup {
     font-size: 8px;
   }
+
+  @media (max-width: 768px) {
+                                    font-size: 16px;
+                            }
 }
 
 .header-brand-baseSpace:hover {
@@ -47,6 +51,12 @@ body {
   height: 40px;
   background-size: 100% auto;
   margin: 15px 15px 0px 15px;
+
+  @media (max-width: 768px) {
+                              width: 80px;
+                              height: 40px;
+                              margin-top: 15px;
+                            }
 }
 
 
