--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -16,7 +16,6 @@ color: #666666;
 
 /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
 
-
                                                     Homepage banner
 
    &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
@@ -30,7 +29,10 @@ color: #666666;
 text-align: left;
 height: 250px;
 background-image: url(http://res.illumina.com/images/rgh/hero/childpageheader-prpl240-v2.jpg);
-
+    
+     @media (max-width: 491px) {
+        height: 150px;
+     }
 }
 
 .banner-title{
@@ -42,6 +44,11 @@ font-weight: 100;
 margin-top: 95px;
 position: relative;
 left: 40px;
+    
+     @media (max-width: 491px) {
+        font-size: 30px;
+        margin-top: 50px;
+     }
     
 }
 
@@ -94,6 +101,7 @@ left: 40px;
                                 margin-right: 0px;
                                 padding-left: 10px;
                                 padding-right: 10px;
+                                left: 20px;
                              }
 
 }
@@ -155,7 +163,7 @@ a.link_grey:hover {
     
     @media (max-width: 460px){
                                 width: 80%;
-                                left: 40px;
+                                left: 30px;
                                 height: 90px;
                              }
 }
@@ -322,7 +330,8 @@ a.link_grey:hover {
 
     @media (max-width: 768px){
                                 top: -2px;
-                                font-size: 35px;
+                                font-size: 25px;
+                                padding-left: 0px;
                              }
     
     @media (max-width: 491px){
@@ -397,7 +406,8 @@ a.link_grey:hover {
 
     @media (max-width: 768px){
                                 top: -2px;
-                                font-size: 35px;
+                                font-size: 25px;
+                                padding-left: 0px;
                              }
     
     @media (max-width: 491px){
@@ -471,7 +481,8 @@ a.link_grey:hover {
 
     @media (max-width: 768px){
                                 top: -2px;
-                                font-size: 35px;
+                                font-size: 25px;
+                                padding-left: 0px;
                              }
 
     @media (max-width: 491px){
