--- a/_less/article.less
+++ b/_less/article.less
@@ -10,6 +10,10 @@
   font: 200 28px/1.2em @font-header, sans-serif;
   color: @article-color;
   letter-spacing: 1px;
+
+  @media (max-width: 491px) {
+    margin-top: 50px;
+  }
 }
 
 .article-content {
