header padding issue fix

--- a/_less/article.less
+++ b/_less/article.less
@@ -27,6 +27,18 @@
     font-size: 14px;
 }
 
+.article-content > h2 {
+    padding-top: 40px;
+}
+
+.article-content > h3 {
+    padding-top: 40px;
+}
+
+.article-content > h4 {
+    padding-top: 30px;
+}
+
 .article-sidebar {
     margin-left: 30px; 
     margin-top: 45px;
@@ -119,10 +131,6 @@
     }
 }
 
-h2, h3 {
-    margin-top: -110px;
-    padding-top: 110px;
-}
 
 
 
