--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -7,7 +7,7 @@
 body { 
   padding-top: 65px; 
   padding-bottom: 50px;
-  min-width: 899px;
+  min-width: 1100px;
 }
 
 .header {
@@ -15,6 +15,13 @@ body {
   border: 1px solid transparent;
   background-color: #fff;
   border-bottom: 1px solid #ededed;
+  margin-left: -50px;
+  margin-right: -30px;
+
+  @media (max-width: 768px) {
+                                margin-left: 0px;
+                                margin-right: 0px;
+                            }
 }
 
 
@@ -52,10 +59,11 @@ body {
   background-size: 100% auto;
   margin: 15px 15px 0px 15px;
 
-  @media (max-width: 768px) {
+  @media (max-width: 899px) {
                               width: 80px;
                               height: 40px;
                               margin-top: 15px;
+                              display: none
                             }
 }
 
@@ -72,6 +80,11 @@ body {
   float: right;
   padding-top: 18px;
   padding-right: 20px;
+
+  @media (max-width: 491px) {
+                              padding-top: 8px;
+                              padding-right: 0px;
+                            }
 }
 
 input {
@@ -126,6 +139,16 @@ input.gsc-search-button {
   line-height: 50px;
   padding-left: 20px;
   padding-right: 20px;
+}
+ 
+.footer-link {
+  text-decoration: none;
+  color: #666;
+}
+
+.footer-link:hover {
+  text-decoration: none;
+  color: #666;
 }
 
 /* Contribute Github */
