--- a/_less/lowerbannerhome.less
+++ b/_less/lowerbannerhome.less
@@ -11,6 +11,7 @@
   border-top: 1px solid #dbdada;
   background-color: #ececec;
   padding-bottom: 100px;
+  padding-top: 100px;
     
     
     @media (max-width: 768px){
