--- a/_less/article.less
+++ b/_less/article.less
@@ -29,10 +29,11 @@
 
 .article-content > h2 {
     padding-top: 40px;
+    text-transform: uppercase;
 }
 
 .article-content > h3 {
-    padding-top: 40px;
+    padding-top: 20px;
 }
 
 .article-content > h4 {
@@ -50,6 +51,10 @@
     padding-left: 40px;
 }
 
+hr {
+    border-color: #999;
+    background-color: #999;
+}
 
 /* SIDE NAV STYLES BEGIN */
 
