--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -41,7 +41,19 @@ body {
   }
 
   @media (max-width: 768px) {
-                                    font-size: 16px;
+                              font-size: 16px;
+                              padding-left: 10px;
+                              height: 25px;
+                              line-height: 10px;
+                              padding-top: 10px;
+                            }
+
+  @media (max-width: 491px) {
+                              font-size: 16px;
+                              padding-left: 30px;
+                              height: 20px;
+                              line-height: 10px;
+                              padding-top: 5px;
                             }
 }
 
@@ -63,7 +75,7 @@ body {
                               width: 80px;
                               height: 40px;
                               margin-top: 15px;
-                              display: none
+                              display: none;
                             }
 }
 
