--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -342,6 +342,10 @@
         text-shadow: none;
         padding-top: 20px;
         border-top: 1px solid #E4E4E4;
+
+         @media (max-width: 491px){
+                                      margin-left: -15%;
+                                  }
       }
    
       .carousel-indicators{
