minor bug fixes
- change banner image url to a resource
- change _newtab to _blank wherever necessary
- changing the font names to generic names in less

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 		  		<div class="col-xs-8 col-sm-offset-2">
 			  	    <a class="header-brand-baseSpace" href="{{ site.baseurl }}/"><b>BaseSpace</b><sup><sup>&reg;</sup></sup> HelpCenter</a> 
 			  	    
-			  	    <a href="http://www.illumina.com/" target="_newtab">
+			  	    <a href="http://www.illumina.com/" target="_blank">
 			  	    	<div class="header-brand-illumina" src="/images/ILLUMINA_LOGO.png"></div>
 			  	    </a> 
 			  	 
