--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -33,7 +33,7 @@ body {
   height: 50px;
   line-height: 20px;
   padding-top: 15px;
-  font: 200 22px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+  font: 200 22px/1.2em @font-header,sans-serif;
   color: #666666;
 
   sup {
