--- a/_less/variables.less
+++ b/_less/variables.less
@@ -27,6 +27,7 @@
 /* FONTS */
 @font-header: "HelveticaNeueW01-ThinEx 710288"; //HelveticaNeue Font
 @font-text: "Arial"; //Arial Font
+@font-alt: "Helvetica";
 @font-color: #666;  //Grey color for the font
 @link-color: #3fa9f5; // color for links
 @line-gap: 22px;
