--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -3,11 +3,11 @@
 <div class="custom-footer navbar-fixed-bottom">
   <div class="container">
     <ul class="footer-holder">
-     <li class="footer-list"><a target="_newtab" class="footer-link" href="https://basespace.illumina.com">BaseSpace</a></li>
-     <li class="footer-list"><a target="_newtab" class="footer-link" href="https://basespace.illumina.com/faq">FAQ</a></li>
-     <li class="footer-list"><a target="_newtab" class="footer-link" href="https://developer.basespace.illumina.com">Developers</a></li>
-     <li class="footer-list"><a target="_newtab" class="footer-link" href="https://basespace.illumina.com/agreements/toc">Terms</a></li>
-     <li class="footer-list"><a target="_newtab" class="footer-link" href="http://blog.basespace.illumina.com/">Blog</a></li>
+     <li class="footer-list"><a target="_blank" class="footer-link" href="https://basespace.illumina.com">BaseSpace</a></li>
+     <li class="footer-list"><a target="_blank" class="footer-link" href="https://basespace.illumina.com/faq">FAQ</a></li>
+     <li class="footer-list"><a target="_blank" class="footer-link" href="https://developer.basespace.illumina.com">Developers</a></li>
+     <li class="footer-list"><a target="_blank" class="footer-link" href="https://basespace.illumina.com/agreements/toc">Terms</a></li>
+     <li class="footer-list"><a target="_blank" class="footer-link" href="http://blog.basespace.illumina.com/">Blog</a></li>
     </ul>
   </div>
 </div>
