--- a/_less/lowerbannerhome.less
+++ b/_less/lowerbannerhome.less
@@ -97,7 +97,7 @@
 
 .banner_heading{
     
-    font:200 28px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+    font:200 28px/1.2em @font-header,sans-serif;
     color: @earth-pumpkin-color;
     text-align: left;
     margin-top: 10px;
@@ -137,25 +137,25 @@
 
 .lower_banner_header{
     
-    font: 16px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+    font: 16px/1.2em @font-header,sans-serif;
     font-weight: bold;
     color: @link-color;
     margin-bottom: 10px;
     
     
         @media (max-width: 1199px){
-                                font:14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+                                font:14px/1.2em @font-header,sans-serif;
 
                              }
     
         @media (max-width: 768px){
                             
-                                font:18px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+                                font:18px/1.2em @font-header,sans-serif;
     
     }
     
     @media (max-width: 491px){
-                                font:14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+                                font:14px/1.2em @font-header,sans-serif;
                              }
 
     
@@ -163,23 +163,23 @@
 
 .lower_banner_text{
     
-    font:12px/1.2em "pt-sans-regular",sans-serif;
+    font:12px/1.2em @font-text,sans-serif;
     color: #666;
     font-weight: 100;
     
         @media (max-width: 1199px){
-                                    font:11px/1.2em "pt-sans-regular",sans-serif;
+                                    font:11px/1.2em @font-text,sans-serif;
 
                                  }
 
         @media (max-width: 768px){
 
-                                    font:12px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+                                    font:12px/1.2em @font-text,sans-serif;
 
         }
     
         @media (max-width: 491px){
-                                font:12px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+                                font:12px/1.2em @font-text,sans-serif;
                              }
 
     
