--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -81,6 +81,7 @@ body {
 
 
 /* Google search box */
+
 #googlecse {
   width:0px;
   overflow:hidden;
@@ -90,7 +91,7 @@ body {
 #custom_search {
   position: relative;
   float: right;
-  padding-top: 18px;
+  padding-top: 14px;
   padding-right: 20px;
 
   @media (max-width: 491px) {
@@ -103,6 +104,7 @@ input {
   border: 1px solid #cfcfcf;
   border-radius: 3px;
   padding-left: 5px;
+  height: 30px;
 }
 
 input.gsc-input {
