--- a/_less/article.less
+++ b/_less/article.less
@@ -28,17 +28,16 @@
 }
 
 .article-content > h2 {
-    padding-top: 40px;
     text-transform: uppercase;
 }
 
-.article-content > h3 {
+/*.article-content > h3 {
     padding-top: 20px;
 }
 
 .article-content > h4 {
     padding-top: 30px;
-}
+}*/
 
 .article-sidebar {
     margin-left: 30px; 
@@ -135,7 +134,6 @@ hr {
         display:none
     }
 }
-
 
 
 
