--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -5,7 +5,7 @@
             %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 body { 
-  padding-top: 65px; 
+  margin-top: 65px; 
   padding-bottom: 50px;
   min-width: 1100px;
 }
