--- a/_less/variables.less
+++ b/_less/variables.less
@@ -74,3 +74,8 @@
 */
 
 /*   ========================================================================================================     */
+
+h2, h3, h4 {
+    padding-top: 110px;
+    margin-top: -110px;
+}
