--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -10,7 +10,7 @@
   font: 100 5em @font-header, sans-serif;
   color: #BE74AE;
   letter-spacing: 1px;
-  margin-top: 150px;
+  margin-top: 35px;
 }
 
 .newb-content {
@@ -71,9 +71,13 @@
      padding-top: 12%;
      color: @font-color;
 
+     @media (max-width: 1440px) {
+                                  font-size: 1em;
+                                }
+
      @media (max-width: 1200px) {
-                              display: none;
-                            }
+                                  display: none;
+                                }
   }
 
   /* Tabs icons */
@@ -81,31 +85,55 @@
     .prep-icon {
        font-size: 4.5em;         
        color: #BE74AE;
+
+       @media (max-width: 1440px) {
+                                    font-size: 3.5em;
+                                  }
     }
 
     .run-icon {
        font-size: 4.5em;         
        color: #FFB441;
+
+       @media (max-width: 1440px) {
+                                    font-size: 3.5em;
+                                  }
     }
 
     .analysis-icon {
        font-size: 4.5em;         
        color: #7CA8D4;
+
+       @media (max-width: 1440px) {
+                                    font-size: 3.5em;
+                                  }
     }
 
     .data-icon {
        font-size: 4.5em;         
        color: #BAC147;
+
+       @media (max-width: 1440px) {
+                                    font-size: 3.5em;
+                                  }
     }
 
     .public-icon {
        font-size: 4.5em;         
        color: #FFB441;
+
+       @media (max-width: 1440px) {
+                                    font-size: 3.5em;
+                                  }
     }
 
     .apps-icon {
        font-size: 4.5em;         
        color: #BE74AE;
+
+       @media (max-width: 1440px) {
+                                    font-size: 3.5em;
+                                  }
     }
 
   /* tabs hover effects */
@@ -421,7 +449,7 @@
 .gradient-divider {
   height: 50px;
   width: 100%;
-  margin-top: 150px;
+  margin-top: 100px;
 
   background-color:rgba(199, 199, 199, 0.2);
   background-image: -moz-radial-gradient(50% 100%, ellipse farthest-corner, rgba(199, 199, 199, 0.4), #ffffff 76%);
