--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,8 @@
 			  	    </a> 
 			  	 
 			  	    <div id="custom_search">
-			  	    	<form id="searchbox_010275296426726970113:l7dpr8y7y3m" method="get" action="{{ site.baseurl }}/articles/searchresults/">
-						    <input value="010275296426726970113:l7dpr8y7y3m" name="cx" type="hidden"/>
+			  	    	<form id="searchbox_002811649472907755927:ae_7fgj1z-k" method="get" action="{{ site.baseurl }}/articles/searchresults/">
+						    <input value="002811649472907755927:ae_7fgj1z-k" name="cx" type="hidden"/>
 						    <input value="FORID:11" name="cof" type="hidden"/>
 						    <input id="q" name="q" size="35" type="text" value="" placeholder="Search BaseSpace Help ...."/>
 						</form> 
