--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -115,6 +115,9 @@ input.gsc-search-button {
   display: none;
 }
 
+.gcsc-branding {
+  display: none;
+}
 
 /* Custom container fluid without padding */
 .container-fluid-header {               
