icon link tag for favicon is fixed

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
 
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/favicon.png" />
+    <link rel="apple-touch-icon" href="/images/favicon.png" />
 
     <!-- Bootstrap core -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
