--- a/_less/sidebar.less
+++ b/_less/sidebar.less
@@ -17,31 +17,10 @@
 }    
     
 
-.line-height {                  /* HR line CSS */
-    
-    height:1px;
-    visibility:hidden;
-    margin-bottom:-5px;
-    
-}
-
-.left-line{                         /*left line and padding*/
-    
-    border-left: 1px solid;
-    border-color: #E8E8E8;
-    padding-left: 40px;
-    
-}
-
-.right{
- padding-right: 20px;               /*right padding*/
-}
-
-
 /* ******************************************** */
 
-.block {
-margin-bottom: 20px;
+.side-block {
+  margin-bottom: 20px;
 }
 
 /* ******************************************** */
@@ -75,97 +54,34 @@ margin-bottom: 20px;
 
 
 .related_section_content {
-    
-    
-  font: 200 12px/1.2em @font-text, sans-serif;
-    
+   font: 200 12px/1.2em @font-text, sans-serif;
 }
 
 
 /* ========================================================================================================    */
 
 .lghtbox {
-display: block;
-padding: 10px;
-margin-bottom: 15px;
--webkit-border-radius: 3px;
--moz-border-radius: 3px;
--ms-border-radius: 3px;
--o-border-radius: 3px;
-border-radius: 3px;
-background-image: -webkit-gradient(linear, 50% 100%, 50% 0%, color-stop(0%, #efefef), color-stop(100%, #ffffff));
-background-image: -webkit-linear-gradient(bottom, #efefef, #ffffff);
-background-image: -moz-linear-gradient(bottom, #efefef, #ffffff);
-background-image: -o-linear-gradient(bottom, #efefef, #ffffff);
-background-image: linear-gradient(bottom, #efefef, #ffffff);
--webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 0 3px;
--moz-box-shadow: rgba(0, 0, 0, 0.3) 0 0 3px;
-box-shadow: rgba(0, 0, 0, 0.3) 0 0 3px;
+  display: block;
+  padding: 10px;
+  margin-bottom: 15px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  background-image: -webkit-gradient(linear, 50% 100%, 50% 0%, color-stop(0%, #efefef), color-stop(100%, #ffffff));
+  background-image: -webkit-linear-gradient(bottom, #efefef, #ffffff);
+  background-image: -moz-linear-gradient(bottom, #efefef, #ffffff);
+  background-image: -ms-linear-gradient(bottom, #efefef, #ffffff);
+  background-image: -o-linear-gradient(bottom, #efefef, #ffffff);
+  background-image: linear-gradient(bottom, #efefef, #ffffff);
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 0 3px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 0 3px;
+  -ms-box-shadow: rgba(0, 0, 0, 0.3) 0 0 3px;
+  -o-box-shadow: rgba(0, 0, 0, 0.3) 0 0 3px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 0 3px;
 }
 
 
-/* ============================================================================================================= */
 
-/* 
-
-.related_section_icon(@iconcolor) {
- 
-    font-size: 20px;
-    margin: 0px 10px 0px 0px 0px;            
-    color: @iconcolor;
-    
-}
-
-.related-articles-icon {
-    
-    .related_section_icon(@article-color);
-}
-
-.related-faq-icon {
-    
-    .related_section_icon(@FAQ-color);
-  
-}
-
-
-.related-video-icon {
-    
-    .related_section_icon(@video-color);
-    
-}
-*/
-
-/* ******************************************** */
-
-
-/*   ========================================================================================================     */
-
-
-/*
-
-.related-heading(@bkgrndcolor, @brdrcolor, @headingcolor) {
-    
-font: 200 20px/1.2em @font-header, sans-serif;
-padding: 5px 0px 5px 15px;
-letter-spacing: 1px;
-background: @bkgrndcolor;
-border-left: 5px solid @brdrcolor;
-color: @headingcolor;
-margin-bottom: 25px;
-    
-}
-
-.related-heading-articles {
-    
-    .related-heading(#E5E5E5,#BBBBBB,#666666)
-    
-}
-
-.related-heading-faqs {
-    
-    .related-heading(#daf1ff,#bce6ff,#4bf)
-    
-}
-
-*/
 
