--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -263,6 +263,11 @@ a.link_grey:hover {
                               }
 }
 
+/* browser hack for safari only */
+_::-webkit-full-page-media, _:future, :root .safari-only {
+
+    display: none;
+}
 
 /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
 
