home page responsive - 1

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,14 +12,11 @@
  		<div class="container-fluid">
 
 		  	<!-- header -->		  	
-		  	<div class="header navbar-fixed-top">
-		  		<div class="col-xs-8 col-sm-offset-2">
+		  	<div class="header navbar-fixed-top row">
+		  	 	<div class="col-sm-4 col-sm-offset-2">
 			  	    <a class="header-brand-baseSpace" href="{{ site.baseurl }}/"><b>BaseSpace</b><sup><sup>&reg;</sup></sup> HelpCenter</a> 
-			  	    
-			  	    <a href="http://www.illumina.com/" target="_blank">
-			  	    	<div class="header-brand-illumina" src="/images/ILLUMINA_LOGO.png"></div>
-			  	    </a> 
-			  	 
+			  	</div>
+			  	<div class="col-sm-4"> 
 			  	    <div id="custom_search">
 			  	    	<form id="searchbox_002811649472907755927:ae_7fgj1z-k" method="get" action="{{ site.baseurl }}/articles/searchresults/">
 						    <input value="002811649472907755927:ae_7fgj1z-k" name="cx" type="hidden"/>
@@ -28,7 +25,12 @@
 						</form> 
 					</div> 
 		  	 	</div>   
-	   		</div> 
+			  	<div class="col-sm-2">
+			  	    <a href="http://www.illumina.com/" target="_blank">
+			  	    	<div class="header-brand-illumina" src="/images/ILLUMINA_LOGO.png"></div>
+			  	    </a>
+			  	</div> 
+			</div> 
 		   	<!--header ends-->
 
 		   	<!-- banner -->
@@ -38,8 +40,8 @@
                           <div class="row">
                                 <div class="banner-custom">
                                     <div class="row">
-									    <div class="col-xs-8 col-xs-offset-2">
-									    	  <h1 class="banner-title">Welcome to our HelpCenter</h1>
+									    <div class="col-xs-8 col-sm-offset-2">
+									    	<h1 class="banner-title">Welcome to our HelpCenter</h1>
 									    </div>
                                     </div>        
                                 </div>
