--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -7,7 +7,6 @@
 body { 
   margin-top: 65px; 
   padding-bottom: 50px;
-  min-width: 1100px;
 }
 
 .header {
@@ -62,7 +61,7 @@ body {
 }
 
 .header-brand-illumina {
-  float: right;
+  float: left;
   position: relative;
   background-image: url("/images/ILLUMINA_LOGO.png");
   background-repeat: no-repeat;
