--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -46,9 +46,18 @@ margin-top: 95px;
 position: relative;
 left: 40px;
     
+     @media (max-width: 767px) {
+        left: 50px;
+     }
+
+     @media (max-width: 600px) {
+        font-size: 40px;
+        left: 50px;
+     }
+
      @media (max-width: 491px) {
         font-size: 30px;
-        margin-top: 50px;
+        margin-top: 40px;
      }
     
 }
@@ -77,6 +86,19 @@ left: 40px;
     position: relative;
     left: 40px;
 
+     @media (max-width: 767px) {
+        left: 50px;
+     }
+
+     @media (max-width: 600px) {
+        font-size: 40px;
+        left: 50px;
+     }
+
+     @media (max-width: 491px) {
+        font-size: 30px;
+        margin-top: 40px;
+     }
 }
 
 .popular-articles-section{
@@ -199,12 +221,12 @@ a.link_grey:hover {
 
 
             @media (max-width: 991px){
-                                        font-size: 14px/1.2em;
+                                        font-size: 16px/1.2em;
                                         
                                      }
 
             @media (max-width: 768px){
-                                        font-size: 14px/1.2em;
+                                        font-size: 16px/1.2em;
                                        
                                      }
 
@@ -233,7 +255,7 @@ a.link_grey:hover {
                                      }
 
             @media (max-width: 768px){
-                                        font-size: 9px/1em;
+                                        font-size: 11px/1em;
                                       
                                      }
 
