--- a/_less/variables.less
+++ b/_less/variables.less
@@ -6,7 +6,13 @@
 @grid-gutter-width: 0px;
 
 /* Responsive sizes */
-@media-xs-max: 767px;
+
+@media-xs-max: 768px;
+@media-sm-min: 769px;
+@media-sm-max: 992px;
+@media-md-min: 993px;
+@media-md-max: 1200px;
+@media-lg-min: 1200px;
 
 /*Colors for headers, banners, footers*/
 
