--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -5,8 +5,10 @@
             %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 body { 
-  margin-top: 65px; 
-  padding-bottom: 50px;
+  @media all and (min-width: @media-sm-min) {
+    margin-top: 65px; 
+    padding-bottom: 50px;
+  }
 }
 
 .header {
@@ -17,10 +19,11 @@ body {
   margin-left: -50px;
   margin-right: -30px;
 
-  @media (max-width: 768px) {
-                                margin-left: 0px;
-                                margin-right: 0px;
-                            }
+  @media (max-width: @media-xs-max) {
+      position: static;
+      margin-left: 0px;
+      margin-right: 0px;
+  }
 }
 
 
@@ -143,6 +146,10 @@ input.gsc-search-button {
   color: #666666;
   height: 50px;
   border-top: 1px solid #bbbbbb;
+
+  @media all and (max-width: @media-xs-max) {
+    position: static;
+  }
 }
 
 .footer-holder {
