Make breadcrumbs position: static at small resolutions

--- a/_less/breadcrumb.less
+++ b/_less/breadcrumb.less
@@ -14,8 +14,8 @@ width: 100%;
 z-index: 20;
 border-bottom: 1px solid #bbbbbb;
 
-	@media (max-width: 491px) {
-		height: 30px;
+	@media (max-width: @media-xs-max) {
+		position: static;
 	}
 }
 
