--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="basespace help site">
     <meta name="author" content="">
 
     <title>{% if page.title == blank %}site.title{% else %}{{ page.title }}{% endif %}</title>
